* ?? Juan J. Martinez <jjm@usebox.net> 0.02-1
- FIX: use strict, warnings at main
- NEW: application icon
- NEW: added preliminar gettext support (en, es, fr)
- FIX: save configuration changes (privacy, resize) after successfuly 
uploading pictures 

* Wed Aug 26 2009 Juan J. Martinez <jjm@usebox.net> 0.01-1
- first public release
